--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: Who-Spoke-Next_4033
-_version: 0.1.0
+_version: 0.2.0
+covers:
+- cover_type: generated
+  image_path: cover.png
 creator:
   author:
     agent_name: Follen, Eliza Lee Cabot
@@ -13,6 +16,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/1362
     wikipedia: http://en.wikipedia.org/wiki/Eliza_Lee_Cabot_Follen
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/4033#Who-Spoke-Next
 gutenberg_issued: '2003-05-01'
 gutenberg_type: Text
 identifiers:
